--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lesley's React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>Lesley's Awesome VAT Calculator</h1>
     <div id="root"></div>
+    <hr>
+    <footer>&copy; Lesley</footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
